Fixed the spacing for project content on yokko page

--- a/sarahhkeast_portfolio/src/styles/components/project-content.scss
+++ b/sarahhkeast_portfolio/src/styles/components/project-content.scss
@@ -6,6 +6,7 @@
         flex-direction: column;
         padding: 28px 18px;
         max-height: 424px;
+        margin-bottom: 56px;
     }
 
     &__text-highlight-container {
